Fix storybook (#1077)
* Fix type error in DefaultRegistrationStatus component

* Fix messed up styles by importing the default styles

* It's RTL not RTE :smile:

* Some minor CSS improvement

* Update utils.js

--- a/packages/rrule-generator/src/components/styles.scss
+++ b/packages/rrule-generator/src/components/styles.scss
@@ -66,7 +66,7 @@
 		span {
 			font-size: var(--ee-font-size-default);
 			font-family: var(--ee-admin-font-family);
-			margin-inline-end: var(--ee-margin-micro);
+			margin-inline: var(--ee-margin-micro);
 			white-space: nowrap;
 		}
 
